Add organisations endpoint